--- a/projeto (1)/site.css
+++ b/projeto (1)/site.css
@@ -12,20 +12,21 @@ h2{
     font-size: 30px;
 }
 
-main h1 {
+.principal h1 {
     text-align: center;
     background-color: #851944;
     color: #FFF;
     padding: 25px;
     border-bottom: 10px solid black;
     font-size: 60px;
+    text-transform: uppercase;
 }
 
 main a {
     color: #851944;
 }
 
-main div {
+.principal div {
     width: 720px;
     margin-left: auto;
     margin-right: auto;
@@ -37,7 +38,7 @@ p {
     margin: 20px 0;
 }
 
-blockquote {
+.citacoes {
     background-color: #D9E5E3;
     border: 10px solid #C2CCCA;
     width: 250px;
@@ -51,15 +52,22 @@ aside{
     color: #F2FFFC;
 }
 
-aside a{
+.navegador a{
     color: inherit;
     font-family: "Open Sans Condensed", sans-serif;
     text-decoration: none;
+    text-transform: lowercase;
 }
 
 aside h1{
     font-size: 30px;
     margin-bottom: 25px;
+}
+
+article {
+    padding-bottom: 30px;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 20px;
 }
 
 .rodape {
@@ -83,7 +91,16 @@ strong{
     font-weight: bold;
 }
 
-.redes-sociais li {
-    display: inline-block;
+
+.leia-mais {
+    padding: 8px;
+    margin: 16px;
+    display: block;
+    font-size: 24px;
+    text-align: center;
+    background-color: #E6E7E8;
 }
 
+aside a{
+    display: inline;
+}
