--- a/projeto (1)/site.css
+++ b/projeto (1)/site.css
@@ -19,6 +19,7 @@ main h1 {
     padding: 25px;
     border-bottom: 10px solid black;
     font-size: 60px;
+    text-transform: uppercase;
 }
 
 main a {
@@ -68,7 +69,8 @@ aside h1{
 }
 
 nav a{
-    color: #F2FFFC; 
+    color: #F2FFFC;
+    text-transform: lowercase;
 }
 
 blockquote, aside, footer {
@@ -84,6 +86,21 @@ strong{
 }
 
 .redes-sociais li {
+    width: 40px;
+    height: 40px;
     display: inline-block;
+    text-indent: -99999px
+    
 }
+
+.leia-mais {
+    
+    padding: 8px;
+    margin: 16px;
+    display: block;
+    font-size: 24px;
+    text-align: center;
+    background-color: #E6E7E8;
+}
+
 
