Finalizada aula 10 curso de HTML e CSS Basico Alura

--- a/projeto (1)/site.css
+++ b/projeto (1)/site.css
@@ -67,6 +67,10 @@ aside h1{
     background-color: black;
     color: #F2FFFC;
     clear: both;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 
 nav a{
@@ -141,19 +145,28 @@ cite{
 
 .menu {
     float:right;
+    width: 15%;
+    position: relative;
+    top: 310px;
 }
 
 .foto {
     float: right;
+    position: absolute;
+    top: 0;
+    right: 0;
+    
+    box-sizing: border-box;
 }
 
 main{
     float: left;
     width: 85%;
+    padding-bottom: 80px;
 }
 
 .menu, .foto {
-    width: 15%;
+    
     box-sizing: border-box;
     border-left: 10px solid black;
     border-bottom: 10px solid black;
