--- a/projeto (1)/css/site.css
+++ b/projeto (1)/css/site.css
@@ -38,14 +38,6 @@ p {
     margin: 20px 0;
 }
 
-blockquote {
-    background-color: #D9E5E3;
-    border: 10px solid #C2CCCA;
-    width: 250px;
-    box-sizing: border-box;
-    margin: 20px 40px;
-}
-
 
 aside{
     background-color: #3C1D3D;
@@ -61,6 +53,7 @@ aside nav{
 aside h1{
     font-size: 30px;
     margin-bottom: 25px;
+    text-align: center;
 }
 
 .rodape {
@@ -73,6 +66,9 @@ aside h1{
     width: 100%;
 }
 
+nav {
+    text-align: center;
+}
 nav a{
     color: #F2FFFC;
     text-transform: lowercase;
@@ -90,8 +86,12 @@ strong{
     font-weight: bold;
 }
 
+.redes-sociais{
+    align-content: center;
+}
 .redes-sociais li {
     display: inline-block;
+    
 }
 
 .redes-sociais a {
@@ -104,39 +104,15 @@ strong{
 
 
 .github {
-    background-image: url(github.png);
+    background-image:url(../img/github.png);
 }
 
 .twitter {
-    background-image: url(twitter.png);
+    background-image: url(../img/twitter.png);
 }
 
 .linkedin {
-    background-image: url(linkedin.png);
-}
-
-.leia-mais {
-    
-    padding: 8px;
-    margin: 16px;
-    display: block;
-    font-size: 24px;
-    text-align: center;
-    background-color: #E6E7E8;
-}
-
-.fiat{
-    float: right;
-}
-
-.petrobras{
-    float: left
-}
-
-cite{
-    font-style: italic;
-    float: right;
-    display: block;
+    background-image: url(../img/linkedin.png);
 }
 
 .subtitulo {
@@ -155,7 +131,6 @@ cite{
     position: absolute;
     top: 0;
     right: 0;
-    
     box-sizing: border-box;
 }
 
